cmake_minimum_required(VERSION 3.0)

project(cuehttp_examples)

add_subdirectory(./chunked)
add_subdirectory(./cookies)
add_subdirectory(./cuehttp)
add_subdirectory(./websocket)
add_subdirectory(./https)
add_subdirectory(./router)
add_subdirectory(./send_file)
add_subdirectory(./session)
add_subdirectory(./static)
add_subdirectory(./plaintext)
